--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 
+#configuration du nom de l'application  
+spring.application.name = Brief_JAVA_BACKEND-Grp3
+#configuration du port  
+server.port =  4200
+
+
+# //Utilisation de @Value pour injecter une URL
+remote.server.url = http://localhost/access
+
+server.port = 4200
+spring.application.name = Brief_JAVA_BACKEND-Grp3
+
+# //Implémentation d’un fournisseur de connexion à une base de données
+database.uri = #//jdbc:mariadb://localhost:4200/db
+database.login = root
+database.password = r00t
+
+# //'initialisation paresseuse :les beans sont créés en fonction des besoins 
+spring.main.lazy-initialization = true
+
+# // Il est utilisé pour activer l'authentification de base.
+security.basic.enabled = true
