--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,23 +1,22 @@
 
 #configuration du nom de l'application  
 spring.application.name = Brief_JAVA_BACKEND-Grp3
-#configuration du port  
-server.port =  4200
 
-
-# //Utilisation de @Value pour injecter une URL
-remote.server.url = http://localhost/access
-
-server.port = 4200
-spring.application.name = Brief_JAVA_BACKEND-Grp3
 
 # //Implémentation d’un fournisseur de connexion à une base de données
-database.uri = #//jdbc:mariadb://localhost:4200/db
-database.login = root
-database.password = r00t
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.login = postgres
+spring.datasource.password = r00t
 
-# //'initialisation paresseuse :les beans sont créés en fonction des besoins 
+# //driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# //hibernate
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= create
+
+
+# //initialisation paresseuse :les beans sont créés en fonction des besoins 
 spring.main.lazy-initialization = true
-
-# // Il est utilisé pour activer l'authentification de base.
-security.basic.enabled = true
