--- a/backend/src/main/java/com/backend/backend/application.properties
+++ b/backend/src/main/java/com/backend/backend/application.properties
@@ -3,9 +3,9 @@
 # DATABASE (connexionBDD)
 # ===============================
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://tran-vmware-pc:5432/bank
+spring.datasource.url=jdbc:postgresql://localhost:5432/getpost
 spring.datasource.username=postgres
-spring.datasource.password=r00t
+spring.datasource.password=
 # ===============================
 # JPA / HIBERNATE (représenter une base de données en objets Java )
 # ===============================
