--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # DATABASE (connexionBDD)
 # ===============================
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/getpost
+spring.datasource.url=jdbc:postgresql://localhost:5432/gespost
 spring.datasource.username=postgres
 spring.datasource.password=
 # ===============================
