--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -14,6 +14,7 @@
 	<name>backend</name>
 	<description>backend project grp 3</description>
 	<properties>
+        <maven.test.skip>true</maven.test.skip>
 		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
